# sales-typer-sqlite

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sales_typer_sqlite/: charts.py  database.py  populate.py  salescli.py
