[project]
name = "sales-typer-sqlite"
version = "0.1"
description = "This is simple sales command line tool on top of Rich, Typer, and SQLite"
readme = "README.md"
authors = [{name = "Muhammad Radifar", email = "m.radifar05@gmail.com"}]
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "rich",
    "typer",
    "faker",
    "matplotlib"
]

[project.optional-dependencies]
test = ["pytest", "flake8"]

[project.scripts]
salescli = "sales_typer_sqlite.salescli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

